AllOverIt
  * ObjectMapper significantly updated:
    - The WithConversion() call now provides the mapper instance so complex nested scenarios can be addressed
    - Source / Target type mapping can be configured on demand when there are no special requirements
    - Object properties are now shallow copied if the source type is assignable to the target type
    - Object properties can be individually configured for deep cloning



01 Sep 2022
Version 6.0.0-RC.8
======================================================================================================================
AllOverIt
  * Added MapMany() extension methods for IObjectMapper
  * Added support for mapping child object properties to IObjectMapper
  * Added CreateParameterExpressions() and GetConstructorWithParameters() to ExpressionUtils
  * Added GetFactory() overloads to TypeExtensions
  * Added new TypeFactory class
  * Updated WithAlias() on TypedObjectMapperOptions so the two property types can be different

AllOverIt.EntityFrameworkCore.Pagination
AllOverIt.Filtering
  * Namespace corrections


29 Aug 2022
Version 6.0.0-RC.7
======================================================================================================================
AllOverIt
  * Added nullable types to AllOverIt.Reflection.CommonTypes

AllOverIt.Serialization.NewtonsoftJson
  * Updated DateTimeAsUtcConverter support DateTime? (implicitly supported in AllOverIt.Serialization.SystemTextJson)


29 Aug 2022
Version 6.0.0-RC.6
======================================================================================================================
AllOverIt.Pagination
  * Exposed the query associated with the paginator

AllOverIt.Filtering
  * Added filter extensions
  * Dropped SynchronizedCache in favour of using an IMemoryCache based implementation


24 Aug 2022
Version 6.0.0-RC.5
======================================================================================================================
AllOverIt